[package]
name = "libgreen"
edition = "2024"

[lib]
name = "green"
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
jni = "0.21"
libc = "0.2.177"
perf-event2 = "0.7.4"
perf-event-data = "0.1.8"
num_cpus = "1.17.0"
affinity = "0.1.2"
csv = "1.4.0"
chrono = "0.4.44"

