[package]
name = "green"
authors = ["Dragoș Ionescu <mail@ionescudragos.com>"]
edition = "2024"
readme = "README.md"

[lib]
name = "green"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
jni = "0.21"
libc = "0.2.177"
perf-event2 = "0.7.4"
perf-event-data = "0.1.8"
num_cpus = "1.17.0"
affinity = "0.1.2"
csv = "1.4.0"
chrono = "0.4.44"

